src/objects/Guradian__c.object
<CustomObject>
    <description>Parents or Guardians associated with students</description>
    <fields>
        <fullName>Address__c</fullName>
        <description>Address of the guardian</description>
        <inlineHelpText>Address of the guardian</inlineHelpText>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>Age of guardian</description>
        <formula>FLOOR((TODAY() - Date_of_birth__c)/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age of guardian</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_birth__c</fullName>
        <description>Date of birth of guardian</description>
        <inlineHelpText>Date of birth of guardian</inlineHelpText>
        <label>Date of birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First Name of the guradian</description>
        <inlineHelpText>First Name of the guradian</inlineHelpText>
        <label>First Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Gender of the guardian</description>
        <inlineHelpText>Gender of the guardian</inlineHelpText>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trans Gender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t want to disclose</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last Name of the guardian</description>
        <inlineHelpText>Last Name of the guardian</inlineHelpText>
        <label>Last Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <description>Mobile of the Guardian</description>
        <inlineHelpText>Mobile of the Guardian</inlineHelpText>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone of the Guardian</description>
        <inlineHelpText>Phone of the Guardian</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Student_Count__c</fullName>
        <description>Student count for each associated guardian</description>
        <inlineHelpText>Student count for each associated guardian</inlineHelpText>
        <label>Student Count</label>
        <summaryForeignKey>Student__c.Gaurdian__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <description>Email of the Guardian</description>
        <inlineHelpText>Email of the Guardian</inlineHelpText>
        <label>email</label>
        <type>Email</type>
    </fields>
    <label>Guardian</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Guradian Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guardians</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Age_should_be_more_than_18_yrs_old</fullName>
        <active>true</active>
        <description>Age_should_be_more_than_18_yrs._old</description>
        <errorConditionFormula>(TODAY()  -  Date_of_birth__c ) &lt; (18*365)

 || 

(TODAY()  -  Date_of_birth__c ) &lt; (18*366)</errorConditionFormula>
        <errorDisplayField>Date_of_birth__c</errorDisplayField>
        <errorMessage>Guardian should have 18 yrs. completed</errorMessage>
    </validationRules>
</CustomObject>